<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JARA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_module">ModuleActivity</string>

    <!-- Buttons -->
    <string name="button_start">Start</string>
    <string name="button_add_module">Add module</string>
    <string name="password">Password</string>
    <string name="participant">Participant</string>
    <string name="researcher">Researcher</string>
    <string name="date">Date</string>
    <string name="password_text">Type in correct Password</string>
    <string name="participant_text">Type in Participant</string>
    <string name="researcher_text">Type in Researcher</string>
    <string name="select_module">Select module</string>
    <string name="title_activity_module_settings">ModuleSettingsActivity</string>

    <!-- for settings screen -->
    <string name="module_description">Module Discripton</string>
    <string name="module_description_key">Module_Discripton</string>
    <string name="title_activity_game">GameActivity</string>
    <string-array name="locations">
        <item >topleft</item>
        <item >topmid</item>
        <item >topright</item>
        <item >midleft</item>
        <item >midmid</item>
        <item >midright</item>
        <item >bottomleft</item>
        <item >bottommid</item>
        <item >bottomright</item>
    </string-array>

</resources>
