<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/size16"
    tools:context=".ModuleActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/size4"
            android:text="@string/password" />

        <TextView
            android:id="@+id/password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/size4"
            android:text="@string/participant" />

        <TextView
            android:id="@+id/participant_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participant" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/size4"
            android:text="@string/researcher" />

        <TextView
            android:id="@+id/researcher_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/researcher" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/size8"
            android:text="@string/select_module"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclick_add_module"
            android:text="@string/button_add_module" />

    </TableRow>

</TableLayout>